<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/yellow"
        tools:context=".CreateAccountActivity">

    <EditText
            android:id="@+id/et_first_name"
            style="@style/viewCustom"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName" />
    <EditText
            android:id="@+id/et_last_name"
            style="@style/viewCustom"
            android:layout_below="@id/et_first_name"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName" />

    <EditText
            android:id="@+id/et_email"
            style="@style/viewCustom"
            android:ems="10"
            android:layout_below="@id/et_last_name"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

    <EditText
            android:id="@+id/et_password"
            style="@style/viewCustom"
            android:layout_below="@id/et_email"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

    <Button
            android:id="@+id/btn_register"
            style="@style/viewCustom"
            android:layout_below="@id/et_password"
            android:background="@color/white"
            android:text="@string/create_act"
            android:padding="16dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

</RelativeLayout>